--- a/Home page/style.css
+++ b/Home page/style.css
@@ -1,7 +1,6 @@
 *{
-    padding: 0%;
-    margin: 0%;
-    font-family: 'Work Sans', sans-serif;
+    padding: 0;
+    margin: 0;
     overflow-x: hidden;   
 }
 body{ 
@@ -9,71 +8,71 @@ body{
     min-width: 100%;  
     overflow-x: hidden; 
 }
-.container-desk {  
+.Container-desk {  
     margin: auto;
     min-width: 300px ; 
     max-width: 1500px ;
 }
-.nav-header {
+.Nav-header {
     background-color:#74C69d;
     width: 100%;
     height: auto;  
 }
-.navbar {
-    margin: 0rem 2rem;
+.Navbar {
+    margin: 0px 32px;
 }
-.navbar img {
-    padding-left: 4rem;
+.Navbar img {
+    padding-left: 64px;
     margin-top: 35px;
 }
-.navbar .fa {
+.Navbar .fa {
     float: right;
-    color: aliceblue;
+    color: #ffffff;
     font-size: 40px;
     padding-left: 0 100%;
-    margin: 1.5rem 1.5rem;
+    margin: 48px 48px;
     display: none;
 }
 
-.navbar ul {
+.Navbar ul {
     float: right;
     font-size: 20px;
     line-height: 25px;
-    margin: 1rem ;
+    margin: 2rem;
     font-family: 'Work Sans', sans-serif;
     font-weight:500;   
 }
-.navbar ul li {
+.Navbar ul li {
     display: inline-block;
     list-style: none;
     margin: 0px;
-    color: white;
+    color:#ffffff;
     font-size: 20px;
 }
-.navbar ul li a {
+.Navbar ul li a {
     display: inline-block;
     text-decoration: none;
-    color: white;
+    color:#ffffff;
     padding: 14px 16px;
 }
-.navbar .menu-btn i {
+.Navbar .Menu-btn i {
     font-size: 30px;
-    color: white;
+    color:#ffffff;
     cursor: pointer; 
   }
   input[type="checkbox"] {
     display: none;
   }
-.row{
+.Row {
     display: flex;
     justify-content: space-between;
     margin: 2rem 4rem;
 }
-.row .right {
+.Row .Right {
     padding-left: 2rem;
 }
-.row p {
-    color:white;
+.Row p {
+    color:#ffffff;
     font-size: 16px;
     font-family: 'Work Sans';
     font-style: normal;
@@ -82,13 +81,13 @@ body{
     font-weight: 700;  
     letter-spacing: 5px;  
 }
-.row h1 {
-    color:white;
+.Row h1 {
+    color:#ffffff;
     font-size: 40px;        
     font-family: 'Crimson Text', serif;
     font-weight: 700;
 }
-.row h6 {
+.Row h6 {
     color: rgba(255, 255, 255, 0.75);
     font-size: 15px;
     font-weight: 400;
@@ -96,7 +95,7 @@ body{
     font-style: normal;
     line-height: 19px;
 }
-.nav-header .row .btn {
+.Nav-header .Row .btn {
     width: 170px;
     height: 48px;
     padding: 8px;
@@ -109,11 +108,11 @@ body{
     border-radius: 5px;
     border: none;    
 }
-.row .logo img {   
+.Row .Logo img {   
     position: relative;
     margin: 3rem 2rem;    
 }
-.about h2 {
+.About h2 {
     letter-spacing: 5px;
     font-size: 16px;
     line-height: 20px;
@@ -123,7 +122,7 @@ body{
     text-align: center;
     margin-top: 4rem;
 }
-.about h1 { 
+.About h1 { 
     font-size: 40px;
     font-family: 'Crimson Text', serif;
     font-weight: 700;
@@ -131,7 +130,7 @@ body{
     color: #000000;   
     margin: 1rem 0;
 }
-.about p {
+.About p {
     font-size: 20px;
     font-family: 'Work Sans';
     font-weight: 400;
@@ -140,98 +139,98 @@ body{
     line-height: 25px;
     margin-top: 1rem;
 }
-.social {
+.Social {
     margin: 2rem 2rem;
     text-align: center;
 }
-.social img {
+.Social img {
     display: flexbox;
     padding: 25px 25px;
     margin: 5px;
     align-items: center;
 }
-.social .btn {
+.Social .btn {
     width: 170px;
     height: 48px;
     text-align: center;
     margin: 2rem 2rem;
     padding: 6px;
     background-color:rgba(33, 37, 41, 1);
-    color: white;
+    color: #ffffff;
     font-size: 20px;
     font-family: 'Work Sans', serif;
     font-weight: 400;
     border-radius: 5px;    
 }
-.img-left .row {
+.Img-left .Row {
     display: flex;
     justify-content: space-between;
 }
-.img-left img {
+.Img-left img {
     margin: 1rem 1rem;
 }
-.row .leftside {
+.Row .Leftside {
     margin: 1.5rem 6rem;
 }
 
-.img-left h1 {
+.Img-left h1 {
     color:#000000;
     font-size: 40px;
     font-weight: 700;
     margin-top: 4rem;
     font-family: 'Crims on Text', serif;
 }
-.img-left h6 {
+.Img-left h6 {
     color: rgba(33, 37, 41, 0.5);
     font-size: 15px;
     font-weight: 400;
     line-height: 19px;
     font-family: 'Work Sans', sans-serif;
 }
-.row .leftside .btn {
+.Row .Leftside .btn {
     width: 170px;
     height: 48px;
     text-align: center;
     margin: 2rem 0rem;
     padding: 6px;
     background: rgba(33, 37, 41, 1);
-    color: white;
+    color: #ffffff;
     font-size: 20px;
     font-family: 'Work Sans', serif;
     font-weight: 400;
     border-radius: 5px; 
 }
-.row .rightside {
+.Row .Rightside {
     margin: 6.5rem 0rem 2rem 2rem;
 }
-.img-right h1 {
+.Img-right h1 {
     color: black;
     font-size: 40px;
     font-weight: 700;
     margin-top: 4rem;
     font-family: 'Crimson Text', serif;
 }
-.img-right h6 {
+.Img-right h6 {
     color: rgba(33, 37, 41, 0.5);
     font-size: 15px;
     font-weight: 400;
     line-height: 19px;
     font-family: 'Work Sans', sans-serif;
 }
-.row .rightside .btn {
+.Row .Rightside .btn {
     width: 170px;
     height: 48px;
     text-align: center;
     margin: 2rem 0rem;
     padding: 6px;
     background: rgba(33, 37, 41, 1);
-    color: white;
+    color: #ffffff;
     font-size: 20px;
     font-family: 'Work Sans', serif;
     font-weight: 400;
     border-radius: 5px; 
 }
-.img-right img {
+.Img-right img {
     margin: 1rem 1.5rem;
 }
 
@@ -262,18 +261,18 @@ body{
     line-height: 25px;
     margin-top: 1rem;
 }
-.card-body img {
+.Card-body img {
     min-width: 100%;
     max-height: auto;
-    border: 1px solid rgb(15, 14, 14);
+    border: 1px solid #000000;
     border-radius: 50%;
   }
-  .Cards .row {
+  .Cards .Row {
     display: flex;
     margin: 32px 47px;  
     justify-content: space-evenly;
   }
-  .Cards .card {
+  .Cards .Card {
     max-width: 279px;
     max-height: auto;
     margin: 1rem 1rem;
@@ -284,10 +283,10 @@ body{
     overflow-y: hidden;
     border-radius: 5px;
   }
-  .Cards .card:hover {
-    border: 1px solid black;
+  .Cards .Card:hover {
+    border: 1px solid #000000;
   }
-  .Cards .row h3 {
+  .Cards .Row h3 {
     font-size: 24px;
     font-family: 'Crimson Text', serif;
     font-weight: 700;
@@ -295,15 +294,15 @@ body{
     align-items: left;
     margin: 1rem 0rem;
   }
-  .Cards .row .text {
+  .Cards .Row .Text {
     font-size: 15px;
     font-weight: 400;
     line-height: 19px;
     text-align: left;
     letter-spacing: normal;
-    color: rgb(80, 82, 83);
+    color: rgba(33, 37, 41, 0.75);
   }
-  .Cards .button {
+  .Cards .Button {
     text-align: center;
   }
   .Cards .btn {
@@ -326,23 +325,23 @@ footer {
     width: 100%;
     height: auto;
   }
-  footer .row {
+  footer .Row {
     justify-content: space-between;
     display: flex;
     margin: 3rem 4rem;
   }
-  footer .icons {
-    margin-right: 30%;
+  footer .Icons {
+    margin-right: 30px;
     margin-top: 16px;
   }
-  footer .icons .fa {
+  footer .Icons .fa {
     color: #ffffff;
     justify-content: space-between;
     padding-left: 25px;
     font-size: 20px;
     cursor: pointer;
   }
-  footer .copyright p {
+  footer .Copyright p {
     color: #ffffff;
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
@@ -355,56 +354,56 @@ footer {
 
 /*--header--*/
 @media only screen and (max-width: 600px) {
-    .navbar img{
+    .Navbar img {
         width: 150px;
         padding-left: 1rem;
         margin-top: 30px;
         
     }
-    .navbar {
+    .Navbar {
         margin: 0rem 0.5rem;
     }
 
-    .nav-header .row{
+    .Nav-header .row {
         flex-direction: column-reverse;
     }
     
-    .row .logo img{    
+    .Row .Logo img {    
         width: 90%;
         height: auto;
         margin: 30px 30px 30px;
         position: relative;
       
     }  
-    .row {
+    .Row {
         margin: 0px 0px;
     }
-    .row p{
-        color:white;
+    .Row p {
+        color:#ffffff;
         margin: auto;
         font-size: 15px;
         font-weight: 700; 
         letter-spacing: 6px;  
     }
-    .row h1{
-        color:white;
+    .Row h1 {
+        color:#ffffff;
         margin: 1rem 0;
         font-size: 28px;
         font-family: 'Crimson Text', serif;
         font-weight: 700;
     
     }
-    .row h6{
+    .Row h6 {
         font-size: 15px;
         font-family: 'Work Sans';
         font-weight: 400;
         color:rgba(255, 255, 255, 0.75);
         margin: auto;
     }
-    .row  br{
+    .Row  br {
         display: none;
     }
-    .nav-header .row .btn{
+    .Nav-header .Row .btn {
         width: 170px;
         height: 48px;
         padding: 8px;
@@ -419,56 +418,56 @@ footer {
     
 }
 @media only screen and (max-width: 768px) {
-    .navbar img{
+    .Navbar img {
         width: 150px;
         padding-left: 1rem;
         margin-top: 30px;
         
     }
-    .navbar {
+    .Navbar {
         margin: 0rem 0.5rem;
     }
 
-    .nav-header .row{
+    .Nav-header .row {
         flex-direction: column-reverse;
     }
     
-    .row .logo img{    
+    .Row .Logo img {    
         width: 90%;
         height: auto;
         margin: 30px 30px 30px;
         position: relative;
       
     }  
-    .row {
+    .Row {
         margin: 0px 0px;
     }
-    .row p{
-        color:white;
+    .Row p {
+        color:#ffffff;
         margin: auto;
         font-size: 15px;
         font-weight: 700; 
         letter-spacing: 6px;  
     }
-    .row h1{
-        color:white;
+    .Row h1 {
+        color:#ffffff;
         margin: 1rem 0;
         font-size: 28px;
         font-family: 'Crimson Text', serif;
         font-weight: 700;
     
     }
-    .row h6{
+    .Row h6 {
         font-size: 15px;
         font-family: 'Work Sans';
         font-weight: 400;
         color:rgba(255, 255, 255, 0.75);
         margin: auto;
     }
-    .row  br{
+    .Row  br {
         display: none;
     }
-    .nav-header .row .btn{
+    .Nav-header .Row .btn {
         width: 170px;
         height: 48px;
         padding: 8px;
@@ -483,56 +482,56 @@ footer {
     
 }
 @media only screen and (max-width: 992px) {
-    .navbar img{
+    .Navbar img {
         width: 150px;
         padding-left: 1rem;
         margin-top: 30px;
         
     }
-    .navbar {
+    .Navbar {
         margin: 0rem 0.5rem;
     }
 
-    .nav-header .row{
+    .Nav-header .Row {
         flex-direction: column-reverse;
     }
     
-    .row .logo img{    
+    .Row .Logo img {    
         width: 90%;
         height: auto;
         margin: 30px 30px 30px;
         position: relative;
       
     }  
-    .row {
+    .Row {
         margin: 0px 0px;
     }
-    .row p{
-        color:white;
+    .Row p {
+        color:#ffffff;
         margin: auto;
         font-size: 15px;
         font-weight: 700; 
         letter-spacing: 6px;  
     }
-    .row h1{
-        color:white;
+    .Row h1 {
+        color:#ffffff;
         margin: 1rem 0;
         font-size: 28px;
         font-family: 'Crimson Text', serif;
         font-weight: 700;
     
     }
-    .row h6{
+    .Row h6 {
         font-size: 15px;
         font-family: 'Work Sans';
         font-weight: 400;
         color:rgba(255, 255, 255, 0.75);
         margin: auto;
     }
-    .row  br{
+    .Row  br {
         display: none;
     }
-    .nav-header .row .btn{
+    .Nav-header .Row .btn {
         width: 170px;
         height: 48px;
         padding: 8px;
@@ -544,7 +543,7 @@ footer {
         border-radius: 5px; 
         
     }
-    .navbar .menu-btn i {
+    .Navbar .Menu-btn i {
         display: inline-block;
         padding-right: 10px;
         font-size: 35px;
@@ -552,24 +551,24 @@ footer {
         margin: 30px auto;
         cursor: pointer;
     }
-    .navbar ul {
+    .Navbar ul {
         display: none;
     }
 
-    .row  br{
+    .Row  br {
         display: none;
     }
     
 }
 @media only screen and (max-width: 1200px) {
-    .row  br{
+    .Row  br {
         display: none;
     }
 
 }
 /*----social--*/
 @media only screen and (max-width: 768px) {
-    .about h2 {
+    .About h2 {
         letter-spacing: 5px;
         font-size: 16px;
         line-height: 20px;
@@ -579,7 +578,7 @@ footer {
         text-align: center;
         margin-top: 2rem;
     }
-    .about h1 { 
+    .About h1 { 
         font-size: 24px;
         font-style: bold;
         font-family: 'Crimson Text', serif;
@@ -588,7 +587,7 @@ footer {
         color: #000000;   
         margin: 1rem 0;
     }
-    .about p {
+    .About p {
         font-size: 20px;
         font-family: 'Work Sans';
         font-weight: 400;
@@ -597,7 +596,7 @@ footer {
         line-height: 25px;
         margin-top: 1rem;
     }
-    .social {
+    .Social {
         margin: 1rem 1rem;
         text-align: center;
     }
@@ -605,25 +604,25 @@ footer {
 }
 /*---img left--*/
 @media only screen and (max-width: 768px) {
-    .img-left .row {
+    .Img-left .Row {
         flex-direction: column;
     }
-    .img-left img {
+    .Img-left img {
         width: 90%;
         margin: 1rem 1rem;
         position: relative;
     }
-    .row .leftside {
+    .Row .Leftside {
           margin: 1.5rem 2rem;
         }
 
-        .row .leftside p{
+        .Row .Leftside p {
             color:#000000;
             margin: auto;
             font-weight: bold;  
             letter-spacing: 6px;  
         }
-        .row .leftside h1{
+        .Row .Leftside h1 {
             font-size: 24px;
             line-height: 30px;
             color:#000000;
@@ -632,45 +631,43 @@ footer {
             font-weight: 550;
         
         }
-        .row .leftside h6{
+        .Row .Leftside h6 {
             font-size: 15px;
             font-weight: 400;
             font-family: 'Work Sans', sans-serif;
             color: rgb(15, 13, 13);
             margin: 1rem 0;
         }
-        .row .leftside br{
+        .Row .Leftside br {
             display: none;
           }
-          .row .leftside .btn {
+          .Row .Leftside .btn {
             width: 170px;
             height: 48px;
             text-align: center;
             margin: 1rem 0rem;
-          }
-        
-   
+          }  
   }
 @media only screen and (max-width: 992px) {
-    .img-left .row {
+    .Img-left .Row {
         flex-direction: column;
     }
-    .img-left img {
+    .Img-left img {
         width: 90%;
         margin: 1rem 1rem;
         position: relative;
     }
-    .row .leftside {
+    .Row .Leftside {
           margin: 1.5rem 2rem;
         }
 
-        .row .leftside p{
+        .Row .Leftside p {
             color:#000000;
             margin: auto;
             font-weight: bold;  
             letter-spacing: 6px;  
         }
-        .row .leftside h1{
+        .Row .Leftside h1 {
             font-size: 24px;
             line-height: 30px;
             color:#000000;
@@ -679,38 +676,35 @@ footer {
             font-weight: 550;
         
         }
-        .row .leftside h6{
+        .Row .Leftside h6 {
             font-size: 15px;
             font-weight: 400;
             font-family: 'Work Sans', sans-serif;
             color: rgb(15, 13, 13);
         }
-        .row .leftside br{
+        .Row .Leftside br {
             display: none;
           }
-        
-   
   }
-  
-  @media only screen and (max-width: 768px) {
-    .img-right .row {
+@media only screen and (max-width: 768px) {
+    .Img-right .Row {
         flex-direction: column-reverse;
     }
-    .img-right img {
+    .Img-right img {
         width: 80%;
         margin: 1rem 1rem;
     }
-    .row .rightside {
+    .Row .Rightside {
         margin: 1.5rem 2rem;
       }
 
-      .row .rightside p{
+      .Row .Rightside p {
           color:#000000;
           margin: auto;
           font-weight: bold;  
           letter-spacing: 6px;  
       }
-      .row .rightside h1{
+      .Row .Rightside h1 {
           font-size: 24px;
           line-height: 30px;
           color:#000000;
@@ -719,43 +713,41 @@ footer {
           font-weight: 550;
       
       }
-      .row .rightside h6{
+      .Row .Rightside h6 {
           font-size: 15px;
           font-weight: 400;
           font-family: 'Work Sans', sans-serif;
           color: rgb(15, 13, 13);
           margin: 1rem 0;
       }
-      .row .rightside br{
+      .Row .Rightside br {
         display: none;
       }
-      .row .rightside .btn {
+      .Row .Rightside .btn {
         width: 170px;
         height: 48px;
         text-align: center;
         margin: 1rem 0rem;
-      }
-      
- 
+      } 
 }
 @media only screen and (max-width: 992px) {
-    .img-right .row {
+    .Img-right .Row {
         flex-direction: column-reverse;
     }
-    .img-right img {
+    .Img-right img {
         width: 80%;
         margin: 1rem 1rem;
     }
-    .row .rightside {
+    .Row .Rightside {
         margin: 1.5rem 2rem;
       }
 
-      .row .rightside p{
+      .Row .Rightside p {
           color:#000000;
           margin: auto; 
           letter-spacing: 6px;  
       }
-      .row .rightside h1{
+      .Row .Rightside h1 { 
           font-size: 24px;
           line-height: 30px;
           color:#000000;
@@ -764,21 +756,19 @@ footer {
           font-weight: 550;
       
       }
-      .row .rightside h6{
+      .Row .Rightside h6 {
           font-size: 15px;
           font-weight: 400;
           font-family: 'Work Sans', sans-serif;
           color: rgb(15, 13, 13);
       }
-      .row .rightside br{
+      .Row .Rightside br {
         display: none;
       }
-      
- 
 }
 /*---cards---*/
 @media only screen and (max-width: 768px) {
-    .Cards .row {
+    .Cards .Row {
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -817,7 +807,7 @@ footer {
     }
 }
 @media only screen and (max-width: 992px) {
-    .Cards .row {
+    .Cards .Row {
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -838,15 +828,15 @@ footer {
       position: absolute;
       margin: auto;    
   }
-  footer .row {
+  footer .Row {
       flex-direction: column;
   }
-  footer .icons {
+  footer .Icons {
       margin: 2rem 1rem;
       text-align: center;
   }
-  footer .icons .fa {
-      color: aliceblue;
+  footer .Icons .fa {
+      color: #ffffff;
       justify-content: center;   
       padding-left: 17px;
       font-size: 20px;
@@ -855,7 +845,7 @@ footer {
       margin: auto;
       text-align: center;   
   }
-  footer .copyright p {
+  footer .Copyright p {
       color: rgb(243, 239, 239);
       text-align: center;
       font-family: 'Work Sans', sans-serif;
@@ -874,20 +864,20 @@ footer {
       position: absolute;
       margin: auto;   
   }
-  footer .row {
+  footer .Row {
     flex-direction: column;
   }
-  footer .icons {
+  footer .Icons {
       margin: 2rem 1rem;
       text-align: center;
   }
-  footer .icons .fa {
-      color: aliceblue;
+  footer .Icons .fa {
+      color: #ffffff;
       justify-content: center;   
       padding-left: 17px;
       font-size: 20px;
   }
-  footer .copyright {
+  footer .Copyright {
       margin: auto;
       text-align: center;  
   }
@@ -909,21 +899,21 @@ footer {
         position: absolute;
         margin: auto;    
     }
-    footer .row {
+    footer .Row {
       flex-direction: column;
       margin: 1rem 0;  
     }
-    footer .icons {
+    footer .Icons {
         margin: 1rem 1rem;
         text-align: center;
     }
-    footer .icons .fa {
-        color: aliceblue;
+    footer .Icons .fa {
+        color: #ffffff;
         justify-content: center;   
         padding-left: 17px;
         font-size: 20px;
     }
-    footer .copyright {
+    footer .Copyright {
         margin: auto;
         text-align: center;   
     }
